Now the product inventory crud has been done
